# sdgs-amr-interaction

./: .gitignore  README.md  _quarto.yml  _toc.yml  article.md  article.qmd  article.tex  myst.html  myst.yml  preview_ms.ps1  pyproject.toml  theme-light.scss
_freeze/notebooks/mixed/execute-results/: html.json  xml.json
_freeze/notebooks/r-code/execute-results/: html.json  xml.json
docs/: article.docx  index.html
docs/notebooks/: method-drafts-preview.html  method-drafts.embed.ipynb  method-drafts.out.ipynb
notebooks/: method-drafts.qmd  mixed.qmd  r-code.qmd
